SERVER-19193 logAction/logChange shouldn't fail if another mongos already created the collection